--- a/style.css
+++ b/style.css
@@ -1,3 +1,87 @@
+body {
+    background-color: lightcoral;
+    font-family: "Georgia",Times New Roman,Times,serif;
+    height: auto;
+}
+
+
+.header {
+    background: #fff;
+    border-bottom: solid 2px lightcoral;
+    width:100%;
+    height:75px;
+    position:absolute;
+    top:0;
+    left:0;   
+    
+}
+
+.container {
+    width: 960px;
+    border: 3px solid lightcorla;
+    background-color: #fff;
+    position: relative;
+    top: 110px;
+    left: 10%;
+    right: 5%;
+    padding: 20px;
+    float: none;
+/*    height: 400px;*/
+    
+}
+
+#roasted {
+    
+    height: 30px;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: "Georgia",Times New Roman,Times,serif;
+}
+
+h2 {
+    color: lightcoral;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 24px;
+}
+
+h5 {
+    font-size: 19px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+
+}
+
+h6 {
+    font-size: 16px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+
+}
+
+p {
+    color: #000;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 30px;
+}
+
+a {
+    color:darkred;
+    text-decoration: none;
+}
+
+a:hover { color: lightcoral; }
+
+img {
+    border-radius: 8px;
+    object-fit: cover;
+    width: 300px;
+    height: 200px;
+    padding: 10px;
+/*    margin-bottom: 8px;*/
+}
+
+
 g {
     fill: red;
 }
@@ -5,11 +89,29 @@ g {
 #main-banner {
     
     background-image:  url(https://blue-bottle-cms.global.ssl.fastly.net/hbhhv9rz9/image/upload/v1534352216/lmzxfpt6nzdiaxk21k85.jpg);
-        
+    background-size: 100%;
     height: 600px;
     width: 100%;
 }
 
 nav nav-tabs { 
     margin: 0 auto;
+}
+
+footer {
+    background: lightcoral;
+    border-top: solid 8px #000;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+}
+
+#footer {
+    color: white;
+    position: relative;
+    bottom: -35px;
+    
 }
